src/routes/CreateProfilePage/CreateProfilePage.css
.create_profile_page {
  width: 100%;
  height: 100vh;
  background: #FFFFFF;
  display: flex;
  flex-direction: row;
}

.create_profile_page .profile_create_wrapper {
  height: 100%;
  width: 50%;
  min-width: 556px;
  display: flex;
  align-items: center;
}

.create_profile_splash_image {
  background-image: url('img/splash-image.png');
  background-repeat: no-repeat;
  background-size: cover;
  width: 50%;
}

@media only screen and (max-height: 800px) {

  .validating_form_input {
    margin-bottom: 22px;
  }

  .profile_edit_form_title {
    margin-bottom: 46px;
  }

  .profile_edit_form h4 {
    line-height: 0px;
  }

}

